attempt to fix link spacing and brand color to secondary pt 3 scss and css

--- a/bootstrap5/scss/custom.scss
+++ b/bootstrap5/scss/custom.scss
@@ -1,8 +1,10 @@
 $primary: #232D4B;
 $secondary: #E57200;
 $link-color: #E57200;
-$link-hover-color: #E57200;
+$link-hover-color: #E58200;
 $navbar-brand-color: #E57200;
 $navbar-brand-hover-color: #E57200;
+$emphasis-color: #E57200;
+$secondary-color: #E57200;
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
